--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ mdev-parser = "0.1"
 kobject-uevent = "0.1"
 anyhow = "1.0"
 structopt = "0.3"
+tracing = "0.1"
+tracing-subscriber = "0.2"
 
 [patch.crates-io]
 mdev-parser = { git = "https://github.com/rust-italia/mdev-parser" }
