Remove workaround, use directly netlink-sys

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ anyhow = "1.0"
 structopt = "0.3"
 tracing = "0.1"
 tracing-subscriber = "0.2"
-netlink-proto = { version = "0.7", features = ["tokio_socket"] }
+netlink-sys = { version = "0.7", features = ["tokio_socket"] }
 futures-util = "0.3"
 
 [patch.crates-io]
