--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ tracing = "0.1"
 tracing-subscriber = "0.2"
 netlink-sys = { version = "0.7", features = ["tokio_socket"] }
 futures-util = "0.3"
+tokio = { version = "1.12", features = ["macros", "rt-multi-thread"] }
+fork = "0.1"
 
 [patch.crates-io]
 mdev-parser = { git = "https://github.com/rust-italia/mdev-parser" }
