Implement scan in /sys
This scan recursively /sys and parse `uevent` file where there is also a
`dev` file and collect into a Vec of UEvent type.

Signed-off-by: Federico Guerinoni <guerinoni.federico@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ netlink-sys = { version = "0.7", features = ["tokio_socket"] }
 futures-util = "0.3"
 tokio = { version = "1.12", features = ["macros", "rt-multi-thread"] }
 fork = "0.1"
+walkdir = "2"
 
 [patch.crates-io]
 mdev-parser = { git = "https://github.com/rust-italia/mdev-parser" }
