--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ futures-util = "0.3"
 tokio = { version = "1.12", features = ["macros", "rt-multi-thread"] }
 fork = "0.1"
 walkdir = "2"
+nix = "0.20"
 
 [patch.crates-io]
 mdev-parser = { git = "https://github.com/rust-italia/mdev-parser" }
