--- a/.github/workflows/fmt.yml
+++ b/.github/workflows/fmt.yml
@@ -11,3 +11,6 @@ jobs:
     - uses: actions/checkout@v2
     - name: fmt
       run: cargo fmt -- --check
+
+    - name: check
+      run: cargo check
