--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,13 +10,13 @@ kobject-uevent = "0.1"
 anyhow = "1.0"
 structopt = "0.3"
 tracing = "0.1"
-tracing-subscriber = "0.2"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 netlink-sys = { version = "0.7", features = ["tokio_socket"] }
 futures-util = "0.3"
 tokio = { version = "1.12", features = ["macros", "rt-multi-thread", "sync"] }
 fork = "0.1"
 walkdir = "2"
-nix = "0.20"
+nix = "0.23"
 
 [patch.crates-io]
 mdev-parser = { git = "https://github.com/rust-italia/mdev-parser" }
