--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,16 +5,16 @@ edition = "2018"
 description = "mini-udev workalike"
 
 [dependencies]
-mdev-parser = "0.1"
+mdev-parser = "0.1.0"
 kobject-uevent = "0.1.0"
-anyhow = "1.0.53"
+anyhow = "1.0.56"
 structopt = "0.3.26"
-tracing = "0.1.30"
-tracing-subscriber = { version = "0.3.8", features = ["env-filter"] }
+tracing = "0.1.32"
+tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
 netlink-sys = { version = "0.7.0", features = ["tokio_socket"] }#0.8.1 seems to be buggy
 futures-util = "0.3.21"
-tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread", "sync"] }
-fork = "0.1.18"
+tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread", "sync", "fs"] }
+fork = "0.1.19"
 walkdir = "2.3.2"
 nix = "0.23.1"
 
