feat: concrete stream type

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mdev"
-version = "0.1.1"
+version = "0.2.0"
 edition = "2021"
 description = "mini-udev workalike"
 
@@ -10,10 +10,11 @@ bytes = "1.9.0"
 clap = { version = "4.5.23", features = ["derive", "wrap_help"] }
 fork = "0.2.0"
 futures-util = "0.3.31"
-kobject-uevent = "0.1.1"
+kobject-uevent = "0.2.0"
 mdev-parser = "0.1.1"
 netlink-sys = { version = "0.8.7", features = ["tokio_socket"] }
 nix = { version = "0.29.0", features = ["user", "fs"] }
+thiserror = "2.0.9"
 tokio = { version = "1.42.0", features = [
     "macros",
     "rt-multi-thread",
