--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,10 @@ version = "0.2.0"
 edition = "2021"
 description = "mini-udev workalike"
 
+[features]
+default = ["syslog"]
+syslog = ["dep:syslog-tracing"]
+
 [dependencies]
 anyhow = "1.0.95"
 bytes = "1.9.0"
@@ -14,6 +18,7 @@ kobject-uevent = "0.2.0"
 mdev-parser = "0.1.1"
 netlink-sys = { version = "0.8.7", features = ["tokio_socket"] }
 nix = { version = "0.29.0", features = ["user", "fs"] }
+syslog-tracing = { version = "0.3.1", optional = true }
 thiserror = "2.0.9"
 tokio = { version = "1.42.0", features = [
     "macros",
